--- a/coc-settings.json
+++ b/coc-settings.json
@@ -21,6 +21,7 @@
     "cs",
     "c"
   ],
-  "coc.preferences.colorSupport": false
+  "coc.preferences.colorSupport": false,
+  "clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/13.0.0/clangd_13.0.0/bin/clangd"
 }
 
